# cookiecutter-python-cli-app-demo

./: .cookiecutter.json  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: changelog.md  cli.md  conf.py
src/cookiecutter_python_cli_app_demo/: __init__.py  __main__.py  cli.py
tests/: __init__.py  test_cli.py  test_cookiecutter_python_cli_app_demo.py  utils.py
